--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			
 				
 				<!-- Avsnitt med informasjon om kaffebar -->
-			<p> Vigo's sieger kaffebar befinner seg i <b>sentrum.</b> Dette er den beste kaffebaren i <u>Bergen.</u> Vi har alle typer <i>kaffe</i></p>
+			<p> Vigo's kaffebar befinner seg i <b>sentrum.</b> Dette er den beste kaffebaren i <u>Bergen.</u> Vi har alle typer <i>kaffe</i></p>
 			<br>
 			<br>
 			<img id="kaffe" src="kafebar.jpg">
